# netskope-sdwan-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: tools.md
src/netskope_sdwan_mcp/: __init__.py  client_factory.py  config.py  errors.py  server.py
src/netskope_sdwan_mcp/tools/: __init__.py  _pagination.py  address_groups.py  alerts.py  applications.py  audit_events.py  ca_certificates.py  client_templates.py  clients.py  cloud_accounts.py  controller_operators.py  controllers.py  device_groups.py  edges_v1.py  gateway_groups.py  gateway_templates.py  gateways.py  inventory_devices.py  jwks.py  list_all.py  monitoring_v1.py  ntp_configs.py  overlay_tags.py  policies.py  radius_servers.py  segments.py  site_commands.py  sites.py  software.py  tenants.py  user_groups.py  users.py  users_v1.py  vpn_peers.py
tests/: test_address_groups.py  test_applications.py  test_audit_events.py  test_ca_certificates.py  test_client_templates.py  test_clients.py  test_cloud_accounts.py  test_config.py  test_controller_operators.py  test_controllers.py  test_device_groups.py  test_edges_v1.py  test_errors.py  test_gateway_groups.py  test_gateway_templates.py  test_gateways.py  test_inventory_devices.py  test_jwks.py  test_list_all.py  test_list_tool_audit.py  test_monitoring_v1.py  test_ntp_configs.py  test_overlay_tags.py  test_policies.py  test_radius_servers.py  test_segments.py  test_site_commands.py  test_smoke.py  test_software.py  test_tenants.py  test_user_groups.py  test_users.py  test_users_v1.py  test_vpn_peers.py
