[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "netskope-sdwan-mcp"
version = "0.1.0"
description = "Read-only MCP server for Netskope SD-WAN APIs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Melamin" }]
dependencies = ["mcp", "netskope-sdwan-py-sdk"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
